<resources>
    <string name="app_name">Github User App 2</string>
    <string name="username">Username</string>

    <string name="users_name">Nama User</string>
    <string name="users_username">Username User</string>
    <string name="users_followers">Followers</string>
    <string name="users_following">Following</string>
    <string name="users_company">Company</string>
    <string name="users_location">Location</string>
    <string name="users_repository">Repositories</string>
    <string name="user_avatar">User Avatar</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_follower">Followers</string>
    <string name="content_tab_following">Following</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="followers">%d followers - </string>
    <string name="following">%d following</string>
    <string name="repo">%d repositories</string>
    <string name="favorite">Favorite</string>
    <string name="change_theme">Change Theme</string>
    <string name="add_favorite">" User added to favorites"</string>
    <string name="delete_favorite">User deleted from favorites</string>
    <string name="home">Home</string>
</resources>